[gd_scene load_steps=3 format=3 uid="uid://ca52kp0kxkmjw"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_m8qr0"]
[ext_resource type="FontFile" uid="uid://qhh3ydhtd2fj" path="res://assets/fonts/PixelOperator8.ttf" id="2_lu60t"]

[node name="Game Over" type="Node2D"]
script = ExtResource("1_m8qr0")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 774.0
offset_top = 268.0
offset_right = 844.0
offset_bottom = 291.0
theme_override_fonts/font = ExtResource("2_lu60t")
text = "Score:"

[node name="ReasonOfDeath" type="Label" parent="."]
offset_left = 470.0
offset_top = 181.0
offset_right = 510.0
offset_bottom = 209.0

[node name="WPMLabel" type="Label" parent="."]
offset_left = 291.0
offset_top = 268.0
offset_right = 515.0
offset_bottom = 291.0
theme_override_fonts/font = ExtResource("2_lu60t")
text = "Words Per Minute:
"

[node name="ReplayButton" type="Button" parent="."]
offset_left = 734.0
offset_top = 352.0
offset_right = 822.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("2_lu60t")
text = "Replay"

[node name="MainMenu" type="Button" parent="."]
offset_left = 349.0
offset_top = 351.0
offset_right = 445.0
offset_bottom = 382.0
theme_override_fonts/font = ExtResource("2_lu60t")
text = "Main Menu"

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 501.0
offset_top = 169.0
offset_right = 604.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_lu60t")
theme_override_font_sizes/font_size = 15
text = "Level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 475.0
offset_top = 97.0
offset_right = 609.0
offset_bottom = 120.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_lu60t")
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
